--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,21 +10,13 @@ android {
         targetSdkVersion 24
         versionCode 1
         versionName "1.0"
-
-        jackOptions {
-            enabled true
-        }
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
-    }
-
-    compileOptions {
-        targetCompatibility 1.8
-        sourceCompatibility 1.8
     }
 }
 
@@ -33,4 +25,5 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:24.2.0'
     testCompile "org.mockito:mockito-core:1.+"
+    androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.2'
 }
