--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,5 +25,6 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:24.2.0'
     testCompile "org.mockito:mockito-core:1.+"
+    testCompile "org.robolectric:robolectric:3.1"
     androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.2'
 }
